v0.18.1/_sources/content/examples/20-published/index.rst.txt


.. _sphx_glr_content_examples_20-published:

In Publication
==============



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, show 1D inversions of a single sounding from each of the RESOLVE and SkyTEM da...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_booky_1D_time_freq_inv_thumb.png
    :alt: Heagy et al., 2017 1D RESOLVE and SkyTEM Bookpurnong Inversions

  :ref:`sphx_glr_content_examples_20-published_plot_booky_1D_time_freq_inv.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 1D RESOLVE and SkyTEM Bookpurnong Inversions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, perform a stitched 1D inversion of the Bookpurnong RESOLVE data. The original ...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_booky_1Dstitched_resolve_inv_thumb.png
    :alt: Heagy et al., 2017 1D RESOLVE Bookpurnong Inversion

  :ref:`sphx_glr_content_examples_20-published_plot_booky_1Dstitched_resolve_inv.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 1D RESOLVE Bookpurnong Inversion</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses Self Consistent Effective Medium Theory to estimate the electrical conductivi...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_effective_medium_theory_thumb.png
    :alt: Effective Medium Theory Mapping

  :ref:`sphx_glr_content_examples_20-published_plot_effective_medium_theory.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Effective Medium Theory Mapping</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, we use a primary-secondary approach to compute the sensitivity of an EM survey with respe...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_heagyetal2017_casing_thumb.png
    :alt: Heagy et al., 2017 Casing Example

  :ref:`sphx_glr_content_examples_20-published_plot_heagyetal2017_casing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 Casing Example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, we perform a 1D inversion using both the frequency and time domain codes. The forward sim...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_heagyetal2017_cyl_inversions_thumb.png
    :alt: Heagy et al., 2017 1D FDEM and TDEM inversions

  :ref:`sphx_glr_content_examples_20-published_plot_heagyetal2017_cyl_inversions.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 1D FDEM and TDEM inversions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook illustrates the SimPEG code used to invert Bouguer gravity data collected at Lagu...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_laguna_del_maule_inversion_thumb.png
    :alt: PF: Gravity: Laguna del Maule Bouguer Gravity

  :ref:`sphx_glr_content_examples_20-published_plot_laguna_del_maule_inversion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PF: Gravity: Laguna del Maule Bouguer Gravity</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we load and plot the SkyTEM (2006) and RESOLVE (2008) Bookpurnong data, availa...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_load_booky_thumb.png
    :alt: Heagy et al., 2017 Load and Plot Bookpurnong Data

  :ref:`sphx_glr_content_examples_20-published_plot_load_booky.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 Load and Plot Bookpurnong Data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="There are two different forms of Richards equation that differ on how they deal with the non-li...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_richards_celia1990_thumb.png
    :alt: FLOW: Richards: 1D: Celia1990

  :ref:`sphx_glr_content_examples_20-published_plot_richards_celia1990.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FLOW: Richards: 1D: Celia1990</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we create and run a FDEM forward simulation to calculate the vertical current inside a ste...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_schenkel_morrison_casing_thumb.png
    :alt: EM: Schenkel and Morrison Casing Model

  :ref:`sphx_glr_content_examples_20-published_plot_schenkel_morrison_casing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EM: Schenkel and Morrison Casing Model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Based on the SEG abstract Heagy, Cockett and Oldenburg, 2014.">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_tomo_joint_with_volume_thumb.png
    :alt: Straight Ray with Volume Data Misfit Term

  :ref:`sphx_glr_content_examples_20-published_plot_tomo_joint_with_volume.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Straight Ray with Volume Data Misfit Term</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Shows the water retention curve and the hydraulic conductivity function for a number of soil ty...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_vadose_vangenuchten_thumb.png
    :alt: FLOW: Vadose: van Genuchten

  :ref:`sphx_glr_content_examples_20-published_plot_vadose_vangenuchten.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FLOW: Vadose: van Genuchten</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /content/examples/20-published/plot_booky_1D_time_freq_inv
   /content/examples/20-published/plot_booky_1Dstitched_resolve_inv
   /content/examples/20-published/plot_effective_medium_theory
   /content/examples/20-published/plot_heagyetal2017_casing
   /content/examples/20-published/plot_heagyetal2017_cyl_inversions
   /content/examples/20-published/plot_laguna_del_maule_inversion
   /content/examples/20-published/plot_load_booky
   /content/examples/20-published/plot_richards_celia1990
   /content/examples/20-published/plot_schenkel_morrison_casing
   /content/examples/20-published/plot_tomo_joint_with_volume
   /content/examples/20-published/plot_vadose_vangenuchten

